# bene

./: .gitattributes  .gitignore  DEVELOPMENT.md  Justfile  README.md  flake.nix  index.html  shell.nix  worker.js  worker.js.map
.github/workflows/: ci.yaml  pre-release.yaml  release.yaml
.github/workflows/setup/: action.yaml
assets/: index-2mdoacnA.js  index-2mdoacnA.js.map  index-3xt6mzLE.css  index-6-RsF5gT.js  index-6-RsF5gT.js.map  index-62LOZlnz.js  index-9bKaY5Mn.js  index-9bKaY5Mn.js.map  index-Am52O9qW.js  index-BPGIIg-0.js  index-BYtBM9Pj.css  index-CB5Puf8p.js  index-CB5Puf8p.js.map  index-C_irisik.js  index-C_irisik.js.map  index-CbzN1a41.js  index-CbzN1a41.js.map  index-CdOznqI8.js  index-CdOznqI8.js.map  index-FvVktd16.css  index-JH3juYIJ.js  index-JH3juYIJ.js.map  index-OZyaDzVm.js  index-OZyaDzVm.js.map  index-PQRZwu0O.css  index-PRV2qG5j.js  index-SARlHamK.js  index-SARlHamK.js.map  index-UrYlP4jm.js  index-UrYlP4jm.js.map  index-YBhRCu0Z.js  index-YBhRCu0Z.js.map  index-_Umm51_e.js  index-b8aLBJvQ.js  index-c6dEr_Vv.js  index-c6dEr_Vv.js.map  index-dnUZ1u33.js  index-dnUZ1u33.js.map  index-jmZ1UUw_.js  index-jmZ1UUw_.js.map  (+30 more)
bene-reader/: content.css  index.html
bene-reader/assets/: bene-components-D1-YSQPX.css  bene-components-DPlOXCp8.css  bene-components-Z_2ruKyC.css  bene-components.iife-B-I5i4im.js  bene-components.iife-B2Vdfq99.js  bene-components.iife-C0ypbnm3.js  bene-components.iife-CdQHcEix.js  bene-components.iife-IihP9JQC.js  bene-components.iife-O8KWz3lo.js  bene-components.iife-_s6a4u55.js  bene-components.iife-czpTu4FJ.js  bene-components.iife-iJkl0H1R.js  bene-components.iife-ijjv0fZB.js  bene-components.iife-xT-jfp_E.js  bene-components.iife-yAPRqG_r.js  content-LW9HPhzL.js  content-LdWjpHnd.js  content-MgHragQm.js  content-eoSMgSIr.js  content-jz5EBhXD.js  content-qTThoSFq.js  index-0FA-z3XX.js  index-0FA-z3XX.js.map  index-0jk-oGx6.js  index-2p7VLf4R.js  index-5ka2dS38.css  index-6GUBkqFF.css  index-7ldZXNCF.js  index-B0Wlp_31.js  index-B0Wlp_31.js.map  index-B771mBEX.css  index-B7UoXWU0.js  index-B7UoXWU0.js.map  index-BCGSz6JL.js  index-BJM88-oK.js  index-BJM88-oK.js.map  index-BMmaYJiS.js  index-BMmaYJiS.js.map  index-BZld4qNY.css  index-B_8Y4Bb3.css  (+75 more)
epubs/: PLAI-3-2-2.epub  make-epub.sh  portable-epubs.epub  refs.epub  wasteland.epub
epubs/bene-tests/: make-epub.sh  portable-epubs.epub  refs.epub
epubs/bene-tests/portable-epubs/EPUB/: index.xhtml  nav.xhtml  refs.opf
epubs/bene-tests/refs/EPUB/: index.xhtml  nav.xhtml  refs.opf
epubs/epub3-samples/: accessible_epub_3.epub  cc-shared-culture.epub  childrens-literature.epub  epub30-spec.epub  hefty-water.epub  internallinks.epub  kusamakura-japanese-vertical-writing.epub  linear-algebra.epub  mahabharata.epub  moby-dick.epub  page-blanche.epub  wasteland.epub
epubs/portable-epubs/EPUB/: annotations.json  index.xhtml  package.opf
js/: .gitignore  .prettierrc.cjs  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json
nix/: bene-bin.nix  bene-src.nix  devshell.nix
rs/: .gitignore  Cargo.toml
rs/crates/bene-app/: Cargo.toml  Tauri.toml  Tauri.windows.toml  tauri.conf.json
rs/crates/bene-app/capabilities/: default.json
rs/crates/bene-app/icons/: icon.icns
rs/crates/bene-app/src/: main.rs  xhtml.rs
rs/crates/bene-epub/: Cargo.toml
rs/crates/bene-epub/src/: cfi.rs  lib.rs  xhtml.rs  zip.rs
rs/crates/bene-epub/src/annotation/: mod.rs  raw.rs  raw_tests.rs
