[workspace]
resolver = "2"
members = ["crates/*"]
 
[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokio = { version = "1.35.0", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "673e3f55d246cd90e70c706ba4ca7f5818e99ba9" }
futures = "0.3.29"
quick-xml = "0.31.0"