[package]
name = "bene-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Will Crichton <crichton.will@gmail.com>"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [ "config-toml"] }
tauri-plugin-log = "2"
clap = { version = "4.5.50", features = ["derive"] }
bene-epub = { path = "../bene-epub" }
tauri-plugin-shell = "2.3.1"
cfg-if = "1"

serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }
