[package]
name = "bene-app"
version = "0.0.1"
description = "An EPUB reading system"
authors = ["Will Crichton <crichton.will@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nota-lang/bene"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["config-toml"] }
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
clap = { version = "4.5.50", features = ["derive"] }
cfg-if = "1"
notify = "8.2.0"
bene-epub = { path = "../bene-epub" }

serde = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[profile.release]
strip = true
lto = true
opt-level = "z"