[package]
name = "bene-epub"
version = "0.1.0"
edition = "2021"

[features]
default = ["async_zip/full"]
wasm = ["async_zip/full-wasm"]

[dependencies]
anyhow = { workspace = true }
async_zip = { version = "0.0.15", features = ["tokio"] }
itertools = "0.12.0"
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-util = "0.7.10"
quick-xml = { workspace = true, features = ["async-tokio", "serialize"] }
async-trait = "0.1.74"
specta = { workspace = true }
futures = { workspace = true }
mime_guess = "2.0.4"
